<resources>
    <string name="app_name">NFT Marketplace</string>
    <string name="title_home">Explore NFTs</string>
    <string name="title_add">Create NFT</string>
    <string name="title_profile">My Profile</string>
    <string name="title_activity_detail">DetailActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg:
        %1$s
    </string>

    <!--    Strings used for Confirm Dialog -->
    <string name="confirm_buy">Confirm</string>
    <string name="cancel_buy">Cancel</string>

    <!--    Strings used for Add Fragment-->
    <string name="nft_title">NFT Title</string>
    <string name="enter_nft_description">Enter NFT Description</string>
    <string name="price_in_eth">Price in ETH</string>
    <string name="upload_image">Upload Image</string>
    <string name="creator_fee">Creator Fee (%)</string>
    <string name="create_nft">Create NFT</string>
    <string name="nft_url">NFT Url Image</string>
    <string name="nft_successful_created">NFT Successful Created</string>
    <string name="nft_failed_created">NFT Failed Created</string>

    <!--    Strings used for Login Activity-->
    <string name="login_to_your_account">Login to your personal account</string>
    <string name="username">Username</string>
    <string name="new_user">Doesn\'t have an account?</string>
    <string name="register_now">Register Now!</string>
    <string name="login">Login</string>
    <string name="login_now">Login Now</string>
    <string name="already_have_account">Already have account?</string>
    <string name="register">Register</string>
    <string name="register_new_account">Create your new account</string>
    <string name="name">Full Name</string>
    <string name="password">Password</string>
    <string name="register_success">Register new account Success!</string>
    <string name="register_error">Register new account failed!, %1$s</string>
    <string name="repeat">Repeat</string>
    <string name="login_success">Login Success,You will be redirect to home page</string>
    <string name="login_error">Login Error, please recheck your account detail again</string>
    <string name="search_image">Search Image</string>
    <string name="name_error_field">Field name must be filled</string>
    <string name="username_empty">Username must be filled</string>
    <string name="password_empty">Password must be filled</string>
    <string name="password_error_field">Password must have 6 character</string>
    <string name="pilih_tema">Choose App Theme</string>
    <string name="auto">Auto</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="setting_page">Settings Page</string>
    <string name="logout_dialog">Are you sure want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="about">About Me</string>
    <string name="url_photo">Photo Url</string>
    <string name="wallet_address">Wallet Address</string>
    <string name="change_detail">Save Changes</string>
    <string name="edit_profile_success">Edit Profile Success!</string>
    <string name="edit_profile_error">Edit profile error, %1$s</string>
    <string name="register_error_user_found">User found!</string>

    <!--    Strings used for Detail Activity-->
    <string name="owned_by">Owned by</string>
    <string name="cd_ethereum">ethereum</string>
    <string name="listings">History</string>
    <string name="icon">icon</string>
    <string name="description">Description</string>
    <string name="about_creator">About Creator</string>
    <string name="creator">creator</string>

    <!--    Strings used for Confirm Dialog-->
    <string name="buy_now">Buy Now</string>
    <string name="checkout">Checkout</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="created_by">Created by</string>

    <!--    String user for Profile Page-->
    <string name="language">Language</string>
    <string name="collection_page">Collection Page</string>
    <string name="favorite_page">Favorite Page</string>
    <string name="theme_setting">Theme Setting</string>
    <string name="logout">Logout</string>
    <string name="total_balance">Balance</string>
    <string name="top_up">Top Up</string>
    <string name="edit_profile_page">Edit Profile Page</string>
    <string name="invalid_amount_of_eth">Invalid Amount of ETH</string>
    <string name="listings_page">NFT History</string>
    <string name="_0_0_eth">0.0 ETH</string>

</resources>