<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_nft_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nft_title"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="16dp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_nft_description"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:hint="@string/enter_nft_description"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/et_nft_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:gravity="top"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="16dp"
            android:paddingHorizontal="64dp"
            android:paddingVertical="32dp"
            android:adjustViewBounds="true"
            android:background="@drawable/bg_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_nft_description"
            android:src="@drawable/icon_upload"/>
        <Button
            android:id="@+id/btn_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/previewImageView"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/upload_image"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:padding="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_nft_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_in_eth"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/btn_upload"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="16dp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_creator_fee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/creator_fee"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/et_nft_price"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="16dp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/create_nft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_creator_fee"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/create_nft"
            android:padding="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>